Updated with working .db

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Data Source=Product.db"
+    "ApplicationDbContext": "Data Source=Products.db"
   }
 }
